Updates (#91)
* Clean up imports

* remove unused resources