@@ -194,7 +194,7 @@ public final class DNSOutgoing {
                     writeByte(val & 0xFF);
                     return;
                 }
-                names.put(name, new Integer(off));
+                names.put(name, Integer.valueOf(off));
             }
             writeUTF(name, 0, n);
             name = name.substring(n);
